# antgent

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  claude_todo.md  config.yaml  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: github-ci.yml
antgent/: __init__.py  clients.py  config.py  init.py
antgent/agents/: __init__.py  base.py  config_resolver.py  message_handler.py  runner.py
antgent/agents/summarizer/: logic.py  models.py  summary.py  summary_judge.py  summary_pretty.py
antgent/cmd/: main.py  server.py  tiktoken.py  worker.py
antgent/models/: __init__.py  agent.py  message.py  visibility.py
antgent/server/: server.py
antgent/server/api/: job_info.py  status.py  utils.py
antgent/server/api/workflows/: list.py  summarizer.py
antgent/services/: s3_uploader.py
antgent/temporal/: __init__.py  activities.py  client.py  queue_manager.py  utils.py
antgent/temporal/workflows/: echo.py
antgent/utils/: __init__.py  config.py  content.py  csv.py  excel.py  graph.py  llm.py  logging.py  pdf.py  reporting.py  token.py
antgent/workflows/: __init__.py  base.py
antgent/workflows/summarizer/: __init__.py  models.py  text.py  workflow.py
demo/claude/: test_structured_output.py
docs/whatsnew/: 2025-10-10-updates.md  2025-10-28-updates.md
documentations/: changelog.md  index.md  migration.md
documentations/development/: coding-style.md
documentations/engineering/: adding-a-new-agent.md  adding-a-workflow.md  adding-agent-tools.md  adding-cli-commands.md  advanced-temporal-concepts.md  cicd-and-deployment.md  configuration-management.md  debugging-and-tracing.md  dependencies-and-licenses.md  generating-reports.md  index.md  integrating-external-services.md  managing-data-models.md  testing-strategy.md  using-summarization-system.md
documentations/introduction/: core-concepts.md  key-features.md  what-is-antgent.md
tests/: test_aliases.py  test_config.py  test_message.py
tests/api/: test_utils.py
tests/temporal/: test_activities.py
tests/workflows/: test_dynamic_config.py
