[project]
name = "antgent"
version = "0.12.4"
description = ""
authors = [{ name = "ant31", email = "2t.antoine@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
include = [
    { path = "antgent/files" }
    ]
dependencies = [
    "asyncio (>=3)",
    "pydantic",
    "typer>=0.16.0",
    "pyyaml",
    "sentry-sdk[fastapi]",
    "temporalloop @ git+https://github.com/ant31/temporal-loop@v2",
    "typing-extensions",
    "ant31box[all] @ git+https://github.com/ant31/ant31box@main",
    "openai",
    "aiohttp",
    "aiohttp-prometheus-exporter",
    "tokenizers",
    "tiktoken",
    "google-genai",
    "openai-agents",
    "litellm",
    "pydantic-ai[logfire]",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "htmldocx>=0.0.6",
    "markdown-it-py>=4.0.0",
    "pypdf>=5.8.0",
    "fpdf2>=2.8.3",
    "typer>=0.16.0",
    "pydot>=4.0.1",
]
packages = [{ include = "antgent" }]

[dependency-groups]
dev = [
    "aioresponses",
    "pyreadline",
    "pylint-pydantic",
    "requests",
    "black",
    "pylint",
    "types-requests",
    "isort",
    "pytest",
    "coverage",
    "pytest-cov",
    "pytest-ordering",
    "pytest-asyncio",
    "pyright",
    "pytest-aioresponses",
    "ruff",
    "sqlacodegen==3.0.0rc5",
    "ipython>=8.0.0,<9",
    "bump-my-version>=1.1.2,<2",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.30",
    "mkdocs-include-markdown-plugin>=7.1.3",
    "mypy>=1.18.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pytest]
testpaths = "tests/"

[tool.bumpversion]
current_version = "0.12.4"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = 'antgent/__init__.py'
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
regex = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false


[tool.coverage.report]
show_missing = true
sort = "-Cover"
exclude_also = [
    # This is only executed while typechecking
    "if TYPE_CHECKING:",
    "@abc.abstractmethod",
    "raise NotImplementedError",
    "logger.debug",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    # This is a warning that is expected to happen: we have an async filter that raises an exception
    "ignore:coroutine 'test_async_input_filter_fails.<locals>.invalid_input_filter' was never awaited:RuntimeWarning",
]
markers = [
    "allow_call_model_methods: mark test as allowing calls to real model implementations",
]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

# [tool.uv.sources]
# temporalloop = { path = "../../oss/temporalloop", editable = true }
